force-app/main/default/objects/BenefitManagementRecertification__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>The OmniScript for the benefit recertification guided application flow.</description>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubType__c</fullName>
        <label>SubType</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Benefit Recertification Flow</label>
</CustomObject>